Rating and source pictures were not middle aligned depending on the theme. Added fix 'display:inline' in lumiere.css, Plural words in French such as Creator, Composer, Actor were not translated. Translated in language/.po file

--- a/src/css/lumiere.css
+++ b/src/css/lumiere.css
@@ -177,6 +177,8 @@ padding:20px 20px 0 20px;float:left;}
 
 .imdbelementRATING {			/*RATING*/}
 
+.imdbelementRATING-picture {display:inline;}
+
 .imdbelementGENRE {			/*GENRE*/}
 
 .imdbelementGOOF {			/*GOOF*/}
@@ -217,7 +219,7 @@ padding:20px 20px 0 20px;float:left;}
 
 .imdbelementSOURCE {			/*SOURCE*/}
 
-.imdbelementSOURCE-picture {vertical-align:text-bottom;}
+.imdbelementSOURCE-picture {vertical-align:middle;display:inline;}
 
 /* ---------------------------------------- Taxonomy page */
 
